# grafana-client

./: .gitignore  Readme.rst  entry.py  setup.cfg  setup.py  study.py
conf/: a-project.yaml  dashboards.yaml  defaults.yaml  macros.yaml  multi-projects.yaml  projects.yaml  sample.json
etc/: grafana_client.ini-sample
grafana_client/: __init__.py  shell.py
grafana_client/cli/: __init__.py  dashboard.py  datasource.py  folder.py
grafana_client/j2man/: render.py
grafana_client/j2man/templates/: dashboard.json.j2  graph.json.j2  helper.j2  row.json.j2  singlestat.json.j2  table.json.j2  text.json.j2
grafana_client/utils/: command.py  config.py  rest.py  url_parse.py
grafana_client/yamlman/: builder.py  formatter.py  parser.py
templates/: table.json  text.json
