[metadata]
name = grafana-client
summary = a tool used to generate Grafana Dashboard
author = SerenaFeng
author-email = serena.fxw.711@gmail.com
home-page = https://github.com/SerenaFeng/Grafana-client
license = Apache-2.0
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    grafana_client

data_files =
#    /etc/grafana_client = etc/*

[entry_points]
console_scripts =
    grafana_client = grafana_client.shell:main

grafana_client =
    folder create = grafana_client.cli.folder:FolderCreate
    folder update = grafana_client.cli.folder:FolderUpdate
    folder show = grafana_client.cli.folder:FolderShow
    folder list = grafana_client.cli.folder:FolderList
    folder delete = grafana_client.cli.folder:FolderDelete
    
    dashboard create = grafana_client.cli.dashboard:DashboardCreate
    dashboard update = grafana_client.cli.dashboard:DashboardUpdate
    dashboard show = grafana_client.cli.dashboard:DashboardShow
    dashboard list = grafana_client.cli.dashboard:DashboardList
    dashboard delete = grafana_client.cli.dashboard:DashboardDelete
    
    datasource create = grafana_client.cli.datasource:DatasourceCreate
    datasource update = grafana_client.cli.datasource:DatasourceUpdate
    datasource show = grafana_client.cli.datasource:DatasourceShow
    datasource list = grafana_client.cli.datasource:DatasourceList
    datasource delete = grafana_client.cli.datasource:DatasourceDelete
    
    
[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0